--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -10,7 +10,7 @@ templateClass: home
         </article>
     </div>
     <div class="container m-auto ">
-        <h2 class="text-3xl pb-5">Short Talk</h2>
+        <h2 class="text-3xl pb-5">Short Talks</h2>
             <div class="m-auto md:grid md:grid-cols-2 md:gap-5 pb-5">
         {% for talk in talks %}
             {% if talk.category == "Short Talk" %}
@@ -53,7 +53,7 @@ templateClass: home
             {% endif %}
             {% endfor %}
             </div>
-            <h2 class="text-3xl pb-5">Talk</h2>
+            <h2 class="text-3xl pb-5">Talks</h2>
             
             <div class="m-auto md:grid md:grid-cols-2 md:gap-5 pb-5">
             {% for talk in talks %}
@@ -98,7 +98,7 @@ templateClass: home
             {% endfor %}
             </div>
             
-            <h2 class="text-3xl pb-5">Poster</h2>
+            <h2 class="text-3xl pb-5">Posters</h2>
 
             <div class="m-auto md:grid md:grid-cols-2 md:gap-5 pb-5">
             {% for talk in talks %}
