Poster tab added

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -32,6 +32,8 @@
                         href="/">Home</a>
                     <a class="flex-none no-underline py-2 pl-3 pr-3 bg-gray-500 border-2 border-gray-400 rounded-md hover:bg-gray-400"
                         href="/schedule">Schedule</a>
+                    <a class="flex-none no-underline py-2 pl-3 pr-3 bg-gray-500 border-2 border-gray-400 rounded-md hover:bg-gray-400"
+                        href="/posters">Schedule</a>
                     
             </nav>
         </div>
